test/functions/promotion/issue-12736-error5.good
issue-12736-error5.chpl:10: error: illegal access of iterator or promoted expression
